# timedil-harness

./: CMakeLists.txt  functors.hpp  main.cpp  misc.hpp  plot  thdq.hpp  timedil_harness.kdev4
